@@ -1,3 +1,8 @@
+2008-10-04  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc-svn.el (vc-svn-dir-status-files):
+	* vc-cvs.el (vc-cvs-dir-status-files): New function.
+
 2008-10-03  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	* vc-hg.el (vc-hg-dir-status-files): New function.
